# MinImageProcess

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mip.cpp
src/: CMakeLists.txt  Config.h.in  MainInterface.cpp  MainInterface.h  MainInterface.ui  res.qrc
src/fun/: ColorAdjust.cpp  ColorAdjust.h  ImageEdit.cpp  ImageEdit.h  Others.cpp  Others.h  Tool.hpp
src/interface/: QComposition.cpp  QComposition.h  QComposition.ui  QCurve.cpp  QCurve.h  QCurveTone.cpp  QCurveTone.h  QHSL.cpp  QHSL.h  QHSL.ui  QText.cpp  QText.h  QTextHelp.cpp  QTextHelp.h  QTextHelp.ui
src/test/: CMakeLists.txt  QCurve_test.cpp
